<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DEF8F8"
    tools:context=".Search_Page_Activity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/main"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="-70dp"
        android:alpha="0.7"
        android:src="#A2E6DF" />
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="-62dp"
        android:alpha="0.7"
        android:src="#A2E6DF" />

    <RelativeLayout
        android:id="@+id/search_div"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/back_to_home"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/back_arrow"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_alignParentTop="true"/>
    <TextView
        android:id="@+id/forgot_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Let's Find..."
        android:textStyle="bold"
        android:textSize="27sp"
        android:textColor="#157177"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="80dp"/>

    <EditText
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="30dp"
        android:layout_below="@id/forgot_msg"
        android:layout_marginTop="10dp"
        android:background="@drawable/search_box"
        android:drawableLeft="@drawable/search_icon"
        android:hint="  Enter Email"
        android:textSize="15sp"
        android:paddingStart="20dp"
        android:inputType="textEmailAddress"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Email"
        android:text="Recent searches"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="#147076"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/search_options"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:weightSum="3"
        android:orientation="vertical"
        android:layout_below="@+id/search_div">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/john_cooper_page"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Mentor 1"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="20dp"
                android:drawableRight="@drawable/close_icon"
                android:drawablePadding="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Mentor 2"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="20dp"
                android:drawableRight="@drawable/close_icon"
                android:drawablePadding="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Mentor 3"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="20dp"
                android:drawableRight="@drawable/close_icon"
                android:drawablePadding="20dp"/>

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_links"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:weightSum="5"
        android:orientation="vertical"
        android:background="#B6ECE7"
        android:layout_below="@+id/search_options"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:paddingTop="10dp"
                android:text="Browse Categories"
                android:textColor="#147076"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <de.hdodenhof.circleimageview.CircleImageView

                android:layout_width="80dp"
                android:layout_height="72dp"
                android:src="@drawable/entrep_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:paddingTop="23dp"
                android:text="Entrepreneurship"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:drawableRight="@drawable/top_right_arrow"/>

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <de.hdodenhof.circleimageview.CircleImageView

                android:layout_width="80dp"
                android:layout_height="72dp"
                android:src="@drawable/growth_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:paddingTop="23dp"
                android:text="Personal Growth"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:drawableRight="@drawable/top_right_arrow"/>

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <de.hdodenhof.circleimageview.CircleImageView

                android:layout_width="80dp"
                android:layout_height="72dp"
                android:src="@drawable/education_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:paddingTop="23dp"
                android:text="Education"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:drawableRight="@drawable/top_right_arrow"/>

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:background="#147076"
        android:weightSum="4"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/home_link"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@drawable/home_icon"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Home"
                    android:textSize="13sp"
                    android:layout_gravity="bottom|center_horizontal"
                    android:textAlignment="center"
                    android:textColor="#51A8A6"
                    android:layout_marginTop="8dp"
                    android:clickable="false"/>
            </FrameLayout>



        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">


            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@drawable/search_icon_clicked"
                    android:layout_marginRight="20dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Search"
                    android:textSize="13sp"
                    android:layout_gravity="bottom|center_horizontal"
                    android:textAlignment="center"
                    android:textColor="#DDF7F7"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="20dp"
                    android:clickable="false"/>
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right"
            android:layout_gravity="center"

            >

            <FrameLayout
                android:layout_width="104dp"
                android:layout_height="68dp"
                android:layout_gravity="center"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/chat_link"
                    android:layout_width="35dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:background="@drawable/chat_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="8dp"
                    android:clickable="false"
                    android:text="Chat"
                    android:textColor="#51A8A6"
                    android:textSize="13sp" />
            </FrameLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/profile_link"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@drawable/person_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Profile"
                    android:textSize="13sp"
                    android:layout_gravity="center_horizontal|bottom"
                    android:textColor="#51A8A6"
                    android:layout_marginTop="8dp"
                    android:clickable="false"/>
            </FrameLayout>

        </LinearLayout>

    </LinearLayout>



    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:civ_border_color="#147076"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:civ_border_width="15dp"
        android:layout_marginBottom="20dp"
        android:src="#FFFFFF" />

    <TextView
        android:id="@+id/add_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/plus"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="45dp"
        />

</RelativeLayout>

