...
        android:layout_height="150dp"
        android:layout_marginTop="-62dp"
        android:alpha="0.8"
        android:src="#A2E6DF" />

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <ImageView
            android:id="@+id/myImageView"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/mentor_me" />


    </RelativeLayout>


    <LinearLayout
        android:id="@+id/login_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header"
        android:orientation="vertical"
        android:background="@drawable/blue_box">

        <TextView
            android:id="@+id/login_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:text="Login"
            android:textColor="@android:color/white"
            android:background="#50C2C9"
            android:textStyle="bold"
            android:textSize="35sp"
            android:layout_marginLeft="25dp"/>

...
            android:layout_marginTop="7dp"
            android:textSize="12sp"
            android:layout_alignRight="@id/Password"
            android:layout_marginLeft="25dp"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:text="Login"
            android:textAllCaps="false"
...
