...
    android:layout_height="match_parent"
    android:background="#DEF8F8"
    tools:context=".Main_Profile_Activity">


    <RelativeLayout
        android:id="@+id/header_top"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#DDF7F7">


        <TextView
...
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/search_link"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@drawable/search_icon"
                    android:layout_marginRight="20dp"
                    app:tint="#51A8A6"/>
...
        android:layout_marginLeft="25dp"

        />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/edit_profile"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="end"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:layout_alignTop="@+id/Greetings"
...
