...


        <TextView
            android:id="@+id/back_arrow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Edit Profile"
            android:textColor="@color/white"
            android:layout_marginLeft="50dp"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
...
